Add index.html and recipes

--- a/recipes/cardamom_maple_salmon.html
+++ b/recipes/cardamom_maple_salmon.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Cardamom Maple Salmon</h1>
-    <img src="/images/cardamom_maple_salmon.jpeg" alt="Finished Cardamom Maple Salmon">
+    <img src="../images/cardamom_maple_salmon.jpeg" alt="Finished Cardamom Maple Salmon">
     <h2>Description</h2>
     <p>I am a salmon lover. This is a great recipe for a slightly exotic flavor of Indian inspiration with a maple twist. The flavor is exceptional, delicious, and unique. Orange zest may be added for an extra flavor twist.</p>
     <h3>Ingredients</h3>
@@ -29,6 +29,6 @@
         <li>Dredge salmon pieces through the maple syrup mixture until evenly coated on all sides.</li>
         <li>Cook salmon in the preheated pan until fish flakes easily with a fork, 5 to 7 minutes per side.</li>
     </ol>
-    <a href="/index.html">Return to main page</a>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
