--- a/recipes/juiciest_hamburgers_ever.html
+++ b/recipes/juiciest_hamburgers_ever.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Juiciest Hamburgers Ever</h1>
-    <img src="/images/juiciest_hamburgers_ever.jpeg" alt="Finished Juiciest Hamburger Ever">
+    <img src="../images/juiciest_hamburgers_ever.jpeg" alt="Finished Juiciest Hamburger Ever">
     <h2>Description</h2>
     <p>No more dry, lackluster burgers. These are juicy, and spices can be easily added or changed to suit anyone's taste. Baste frequently with your favorite barbeque sauce. If you find the meat mixture too mushy, just add more bread crumbs until it forms patties that hold their shape.</p>
     <h3>Ingredients</h3>
@@ -27,6 +27,6 @@
         <li>In a large bowl, mix the ground beef, egg, bread crumbs, evaporated milk, Worcestershire sauce, cayenne pepper, and garlic using your hands. Form the mixture into 8 hamburger patties.</li>
         <li>Lightly oil the grill grate. Grill patties 5 minutes per side, or until well done.</li>
     </ol>
-    <a href="/index.html">Return to main page</a>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
