--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>My Odin Recipes</h1>
-    <img src="/images/anime _cooking.jpg" alt="Anime Girl Cooking">
+    <img src="images/anime _cooking.jpg" alt="Anime Girl Cooking">
     <ul>
         <li><a href="recipes/juicy_roasted_chicken.html">Juicy Roasted Chicken</a></li>
         <li><a href="recipes/juiciest_hamburgers_ever.html">Juiciest Hamburgers Ever</a></li>
