--- a/recipes/juicy_roasted_chicken.html
+++ b/recipes/juicy_roasted_chicken.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Juicy Roasted Chicken</h1>
-    <img src="/images/juicy_roasted_chicken.jpg" alt="Finished Juicy Roasted Chicken">
+    <img src="../images/juicy_roasted_chicken.jpg" alt="Finished Juicy Roasted Chicken">
     <h2>Description</h2>
     <p>My grandmother's recipe for roasted chicken. We are German and she used to do it this way all the time. I never have had a chicken this juicy before; this little trick works and makes the people eating it go silent. It's funny. We nibble on the celery after.</p>
     <h3>Ingredients</h3>
@@ -25,6 +25,6 @@
         <li>Place chicken in a roasting pan, and season generously inside and out with salt and pepper. Sprinkle inside and out with onion powder. Place 3 tablespoons margarine in the chicken cavity. Arrange dollops of the remaining margarine around the chicken's exterior. Cut the celery into 3 or 4 pieces, and place in the chicken cavity.</li>
         <li>Bake uncovered 1 hour and 15 minutes in the preheated oven, to a minimum internal temperature of 180 degrees F (82 degrees C). Remove from heat, and baste with melted margarine and drippings. Cover with aluminum foil, and allow to rest about 30 minutes before serving.</li>
     </ol>
-    <a href="/index.html">Return to main page</a>
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
